# ai-agent-crew

./: .env.example  .gitignore  .gitmodules  .replit  CONTRIBUTING.md  README.md  agents.py  aibtcdev_agents.py  aibtcdev_app.py  aibtcdev_config.yaml  aibtcdev_crews.py  aibtcdev_streamlit.py  aibtcdev_tools.py  aibtcdev_utils.py  bitcoin_crew_app.py  bitcoin_crew_app_selections.py  meeting_preparation.py  meeting_summary.py  news_examples.py  old_aibtcdev_streamlit.py  prepare_for_meeting.py  replit.nix  requirements.txt  run_crew.py  run_managed_crew.py  setup.sh  shell.nix
.streamlit/: config.toml
agendas/: 2024-05-23-06-53-generated-meeting-agenda.md  2024-05-23-06-59-generated-meeting-agenda.md  2024-05-23-07-12-generated-meeting-agenda.md  2024-05-23-07-37-generated-meeting-agenda.md  2024-05-29-13-30-generated-meeting-agenda.md  2024-05-31-15-52-generated-meeting-agenda.md  2024-05-31-16-02-generated-meeting-agenda.md  2024-05-31-16-07-generated-meeting-agenda.md  2024-05-31-16-14-generated-meeting-agenda.md  2024-05-31-16-18-generated-meeting-agenda.md  2024-06-06-08-27-generated-meeting-agenda.md  2024-06-07-16-42-generated-meeting-agenda.md  2024-06-07-17-10-generated-meeting-agenda.md  2024-06-07-17-41-generated-meeting-agenda.md
aibtc-v1/: app.py  chat.py  main.py  run_clarinet.py
app-v1/: aibtcdev_app.py  utils.py
app_v1/: aibtcdev_app.py  aibtcdev_config.yaml  utils.py
app_v1/wallet-summarizer/: .env.example  execution.py  pyproject.toml  requirements.txt  shell.nix  test.py
app_v1/wallet-summarizer/crew_ai/: agents.py  tasks.py  tools.py
(+92 files in other folders)
